Name:                   piki
Version:                0.3
Author:                 Kazu Yamamoto <kazu@Mew.org>
Maintainer:             Kazu Yamamoto <kazu@Mew.org>
License:                BSD3
Homepage:               http://www.mew.org/~kazu/proj/piki/
Synopsis:               Yet another Wiki format converter
Description:            "piki" is a script to convert a WIKI text file
                        to an HTML file. Unlike other WIKI systems, 
                        "piki" is not executed through a web server. 
                        You can use "piki" in the shell command line.
Category:               Web
Cabal-Version:          >= 1.2
Build-Type:             Simple 
Data-Files:             doc/en/Makefile,
                        doc/en/default.css,
                        doc/en/index.html,
                        doc/en/index.piki,
                        doc/en/template.html,
                        doc/ja/Makefile,
                        doc/ja/default.css,
                        doc/ja/index.html,
                        doc/ja/index.piki,
                        doc/ja/template.html
Executable piki
    HS-Source-Dirs:     src
    Main-Is:            Main.hs
    GHC-Options:        -Wall
    Build-Depends:      base >= 2.0 && < 4,
                        parsec >= 2.0.0.0,
                        utf8-string >= 0.3
    Other-Modules:      Html,
                        HtmlText,
                        LineParser,
                        Notation,
                        Piki,
                        Tag
